update views to reflect changes in todos model

--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -5,5 +5,7 @@
   <%= f.text_field :body %>
   <%= f.label :list_name %>
   <%= f.text_field :list_name %>
+  <%= f.label :status %>
+  <%= f.text_field :status %>
   <%= f.submit %>
 <% end %>
