--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :body %>
   <%= f.label :list_name %>
   <%= f.text_field :list_name %>
-  <%= f.label :todo_count %>
-  <%= f.text_field :todo_count %>
+  <%= f.label :status %>
+  <%= f.text_field :status %>
   <%= f.submit %>
 <% end %>
