--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -6,6 +6,6 @@
   <%= f.label :list_name %>
   <%= f.text_field :list_name %>
   <%= f.label :status %>
-  <%= f.text_field :status %>
+  <%= f.select :status, Todo::STATUSES.values, {:include_blank => false} %>
   <%= f.submit %>
 <% end %>
